styles: centering login div

--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,26 @@
 
     <link rel="stylesheet" href="https://unpkg.com/@tailwindcss/forms@0.3.2/src/index.js">
 
+    <style>
+        body {
+            width: 100vw;
+            height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        body div {
+            width: 100%;
+        }
+    </style>
+
     <title>Websocket</title>
 </head>
 
 <body>
 
-    <div class="flex  justify-center">
+    <div class="flex justify-center">
         <div class="w-full max-w-2xl	">
             <form action="chat.html" class="bg-white shadow-md rounded px-8 pt-6 pb-12 mb-8">
                 <div class="mb-8">
